# nxt3

./: .gitmodules  README.md  lgtm.yml
firmware/: CMakeLists.txt
firmware/core/: CMakeLists.txt  Connections.txt  Cursor.txt  Display.txt  Font.txt  Functions.inl  Icons.txt  Mainmenu.rms  RCXintro_13.txt  RCXintro_15.txt  RCXintro_2.txt  RCXintro_6.txt  RCXintro_7.txt  Submenu01.rms  Submenu02.rms  Test1.txt  Ui.txt  c_button.c  c_cmd.c  c_cmd.h  c_cmd_drawing.inc  c_comm.c  c_comm.iom.h  c_display.c  c_input.c  c_input.h  c_input.iom.h  c_ioctrl.c  c_loader.c  c_lowspeed.c  c_lowspeed.iom.h  c_output.c  c_output_reg.c  c_pnp.c  c_pnp.h  c_sound.c  c_sound.h  c_sound_adpcm.c  c_sound_adpcm.h  c_ui.c  (+24 more)
firmware/core/include/: c_cmd.h  c_cmd_bytecodes.h  c_comm.h  c_display.h  c_display.iom.h  c_ioctrl.h  c_loader.h  c_loader.iom.h  c_lowspeed.h  c_output_reg.h  c_pnp.iom.h  c_sound.h  c_ui.h  c_ui.iom.h  d_bt.h  modules.h
firmware/core/include/c_sound/: adpcm.h  buffer.h  iomap.h  main.h  resampler.h  sndfile.h
firmware/core/scripts/: mkbitmap.cmake  mkbitmap.py  mkfont.cmake  mkfont.py  mkicons.cmake  mkicons.py  mkmenu.cmake  mkmenu.py  mktexts.cmake  mktexts.py
firmware/core/scripts/decoders/: debitmapize.py  defontize.py  deiconize.py  demenuize.py
firmware/core/scripts/utils/: imagepipe.py
firmware/core/src/: BtTest.inc.h  Functions.inl.h  c_cmd.c  c_cmd_iomap_writer.c  c_comm.c  c_input.c  c_ioctrl.c  c_lowspeed.c  c_output_reg.c  c_pnp.c  c_sound.c  c_ui.c
firmware/core/src/c_sound/: adpcm.c  buffer.c  main.c  resampler.c  sndfile.c
firmware/hal/: CMakeLists.txt
firmware/hal/generic/: CMakeLists.txt  README.md
firmware/hal/generic/include/: hal_adc.h  hal_adc_defs.h  hal_battery.h  hal_bt.h  hal_button.h  hal_display.h  hal_errorcodes.h  hal_ev3sensor.h  hal_filesystem.h  hal_general.h  hal_iic.h  hal_led.h  hal_motor.h  hal_pnp.h  hal_pnp_defs.h  hal_rs485.h  hal_rs485_defs.h  hal_sound.h  hal_timer.h  hal_types.h  hal_usb.h
firmware/hal/generic/src/: hal_adc.c  hal_ev3sensor.c  hal_filesystem.c  hal_iic.c  hal_motor.c  hal_pnp.c  hal_timer.c  hal_usb.c
firmware/hal/lms2012/: CMakeLists.txt  LICENSE.txt  README.md
firmware/hal/lms2012/include/: device_db.h  drv_analog.h  drv_analog.private.h  drv_dcm.h  drv_dcm.private.h  drv_dummy.h  drv_motor.h  drv_port.h  drv_uart.h  drv_uart.private.h  ev3_fs.h  hal_adc.private.h  hal_battery.private.h  hal_bt.private.h  hal_button.private.h  hal_display.private.h  hal_filesystem.private.h  hal_iic.private.h  hal_led.private.h  hal_motor.private.h  hal_pnp.private.h  hal_rs485.private.h  hal_sound.private.h  hal_timer.private.h  hal_usb.private.h  kdev_ui.h  kdevices.h  posix_fs.private.h  sen_base.h  sen_dummy_light.h  sen_dummy_us.h  sen_ev3.color.h  sen_ev3_color.h  sen_ev3_color.private.h  sen_ev3_touch.h  sen_ev3_touch.private.h  sen_ev3_us.h  sen_ev3_us.private.h  sen_tty.h
firmware/hal/lms2012/include/comm/: ev3proto.h  ev3proto.private.h  hal_usb.private.h
firmware/hal/lms2012/include/common/: kdev_core.h  kdevices.h
firmware/hal/lms2012/include/fs/: hal_filesystem.private.h  posix_fs.h  posix_fs.private.h
firmware/hal/lms2012/include/io/adapters/: ev3_color.private.h  iic_base.h  (+7 more)
firmware/hal/lms2012/include/ui/: hal_display.private.h  hal_sound.private.h
firmware/hal/lms2012/src/: device_db.c  drv_analog.c  drv_dcm.c  drv_dummy.c  drv_motor.c  drv_uart.c  hal_adc.c  hal_battery.c  hal_bt.c  hal_button.c  hal_display.c  hal_display_render.c  hal_filesystem.c  hal_general.c  hal_iic.c  hal_led.c  hal_motor.c  hal_pnp.c  hal_rs485.c  hal_sound.c  hal_sound_melody.c  hal_sound_pcm.c  hal_sound_tone.c  hal_timer.c  hal_usb.c  kdev_core.c  kdev_ui.c  kdevices.c  posix_fs.c  sen_base.c  sen_dummy_light.c  sen_dummy_us.c  sen_ev3_color.c  sen_ev3_touch.c  sen_ev3_us.c  sen_iic_base.c  sen_tty.c
firmware/hal/lms2012/src/comm/: ev3proto.c  hal_bt.c  hal_rs485.c  hal_usb.c  md5.c
firmware/hal/lms2012/src/common/: kdev_core.c  kdevices.c
firmware/hal/lms2012/src/fs/: hal_filesystem.c  posix_fs.c
firmware/hal/lms2012/src/misc/: hal_battery.c  hal_general.c  hal_timer.c
firmware/hal/lms2012/src/ui/: hal_button.c  hal_display.c  hal_display_render.c  hal_led.c  hal_sound.c  hal_sound_melody.c  hal_sound_pcm.c  hal_sound_tone.c
firmware/hal/lms2012_battd/: CMakeLists.txt  README.md
firmware/hal/lms2012_battd/include/: autooff.h  fifo.h
firmware/hal/lms2012_battd/include/action/: action.h  display.h  leds.h  power.h  pwm.h  sound.h
firmware/hal/lms2012_battd/include/detection/: analog.h  detection.h  temperature.h
firmware/hal/lms2012_battd/screens/: overtemp.xbm  undervoltage.xbm
firmware/hal/lms2012_battd/src/: autooff.c  battd.c  fifo.c
firmware/hal/lms2012_battd/src/action/: action.c  display.c  leds.c  power.c  pwm.c  sound.c
firmware/hal/lms2012_battd/src/detection/: analog.c  detection.c  temperature.c
firmware/installer/: CMakeLists.txt  mksfx.py  sfx.sh
firmware/resources/INTRO/: Intro.txt
firmware/resources/MAINMENU/: Mainmenu.txt
firmware/resources/MENUES/: Mainmenu.txt  Submenu04.txt  Submenu05.txt  icons.json
firmware/resources/SUBMENU04/: Submenu04.txt
firmware/resources/TEXT/: Ui.txt  strings.json
firmware/resources/bitmaps/: Cursor.json  Display.json  Fail.json  Info.json  LowBattery.json  Ok.json  Test1.json  Test2.json  Wait.json
firmware/resources/comm/: devices.json  empty_slots.json
firmware/resources/font/: normal.json  port.json
firmware/resources/intro/: frame1.json  frame10.json  frame11.json  frame12.json  frame13.json  frame14.json  frame15.json  frame16.json  frame2.json  frame3.json  frame4.json  frame5.json  frame6.json  frame7.json  frame8.json  frame9.json
firmware/resources/menu/: blockprg.json  bluetooth.json  common.json  datalog.json  files.json  main.json  settings.json  tryme.json  view.json
firmware/resources/menu/icons/: icons.json
firmware/resources/obp/steps/: steps.json
firmware/resources/running/: animation.json
firmware/resources/status/: status.json
firmware/toolchain/: README.md  config.mak  toolchain.cmake
(+198 files in other folders)
